--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,43 +1,47 @@
 {
-    "env": {
-      "commonjs": true,
-      "browser": true,
-      "es2021": true,
-      "node": true
+  "env": {
+    "commonjs": true,
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["airbnb", "prettier", "plugin:node/recommended"],
+  "plugins": ["prettier"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": ["airbnb", "prettier", "plugin:node/recommended"],
-    "plugins": ["prettier"],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },      
-      "ecmaVersion": 12,
-      "sourceType": "module"
-    },
-    "rules": {
-      "prettier/prettier": 2,
-      "class-methods-use-this": 0,
-      "func-names": 0,
-      "linebreak-style": 0,
-      "no-unused-vars": 1,
-      "no-console": 0,
-      "no-process-exit": 0,
-      "no-multiple-empty-lines": 1,
-      "no-var": 2,
-      "no-underscore-dangle": 0,
-      "object-shorthand": 0,
-      "prefer-const": 2,
-      "node/no-unsupported-features/es-syntax": 0,
-      "node/no-unpublished-require": 0,
-      "react/prop-types": 0,
-      "react/destructuring-assignment": 0,
-      "react/no-unescaped-entities": 0,
-      "react/jsx-one-expression-per-line": 0,
-      "react/display-name": 0,
-      "react/prefer-stateless-function": 0,
-      "react/jsx-props-no-spreading": 0,
-      "react/react-in-jsx-scope": 0,
-      "react/jsx-indent-props": [2, 2]
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "latest"
     }
+  },
+  "rules": {
+    "prettier/prettier": 2,
+    "class-methods-use-this": 0,
+    "func-names": 0,
+    "linebreak-style": 0,
+    "no-unused-vars": 1,
+    "no-console": 0,
+    "no-process-exit": 0,
+    "no-multiple-empty-lines": 1,
+    "no-var": 2,
+    "no-underscore-dangle": 0,
+    "object-shorthand": 0,
+    "prefer-const": 2,
+    "node/no-unsupported-features/es-syntax": 0,
+    "node/no-unpublished-require": 0,
+    "react/prop-types": 0,
+    "react/destructuring-assignment": 0,
+    "react/no-unescaped-entities": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "react/display-name": 0,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/react-in-jsx-scope": 0,
+    "react/jsx-indent-props": [2, 2]
   }
-  
+}
