--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node ./index",
-    "test": "babel-node ./index"
+    "test": "babel-node ./app"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
