--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,6 @@
     "react/prefer-stateless-function": 0,
     "react/jsx-props-no-spreading": 0,
     "react/react-in-jsx-scope": 0,
-    "react/jsx-indent-props": [2, 2]
+    "react/jsx-indent-props": ["error", 2]
   }
 }
