--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "description": "miroservice monorepo, lerna + yarn workspaces project",
   "main": "index.js",
   "scripts": {
+    "server-dev": "yarn workspace server start",
+    "web-dev": "yarn workspace client start",
+    "start": "run-p server-dev web-dev",
     "test": "mocha --recursive",
-    "lerna": "lerna run test",
+    "lerna": "lerna boostrap",
     "new-version": "lerna version --conventional-commits --yes",
     "diff": "lerna diff"
   },
@@ -38,6 +41,7 @@
     "lint-staged": "^10.5.3",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1"
   },
   "dependencies": {
