--- a/packages/bffmatter/package.json
+++ b/packages/bffmatter/package.json
@@ -10,18 +10,11 @@
   "homepage": "https://www.npmjs.com/package/@williamjiang/util",
   "license": "ISC",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
   "repository": {
     "type": "git",
     "url": "https://gitee.com/jxjwilliam/ms-monorepos.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "start": "node ./index"
   }
 }
